# Support-Vector-Machines

./: README.md  SINC_SVR.ipynb  dataset_examples.ipynb  pyproject.toml
notebooks/datasets/: dataset_examples.ipynb
notebooks/part_1_linear/: 1_epsilon_hard_sv_regression.ipynb  2_epsilon_soft_sv_regression.ipynb
notebooks/part_2_non_linear/: 1_epsilon_soft_sv_regression.ipynb
notebooks/part_3_cost_functions/: 1_cost_function_visualisations.ipynb  2_empirical_risk_minimisation.ipynb  3_noise_cost_fct_choice.ipynb
notebooks/part_4_regularization_network/: 1_regularization_network.ipynb
sv_machines/Non-linear SVR using kernels/: 2-Linear_regression_VS_SVR_fine_tunning_parameters.py  SINC_support_vector_regression_test_parametersipynb
sv_machines/cost_functions/: cost_functions.py
sv_machines/datasets/: README.mc  circle.py  function_a.py  line.py  utils.py
sv_machines/prediction_functions/: README.md  epsilon_sv_regression_hard_border.py  linear_regression.py
