[project]
name = "sv-machines"
version = "0.1.0"
description = ""
authors = [
    {name = "Aimine Meddeb, Oscar Loriou, Louis Mayonove, Annabelle Lichou"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
