[project]
name = "sv-machines"
version = "0.1.0"
description = ""
authors = [
    {name = "Aimine Meddeb, Oscar Loriou, Louis Mayonove"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "cvxpy (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black[jupyter] (>=25.11.0,<26.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
